force-app/main/default/objects/Sample_Request__c/Sample_Request__c.object-meta.xml
<CustomObject>
    <label>Old Sample Request</label>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>Sample Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Old Sample Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>