force-app/main/default/objects/Sample_Request__c/fields/Additional_Shipping_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Additional_Shipping_Instructions__c</fullName>
    <label>Additional Shipping Instructions</label>
    <length>128</length>
    <type>Text</type>
</CustomField>