force-app/main/default/objects/Sample_Request__c/fields/Backorder_Date__c.field-meta.xml
<CustomField>
    <fullName>Backorder_Date__c</fullName>
    <label>Backorder Date</label>
    <type>Date</type>
</CustomField>