force-app/main/default/objects/Sample_Request__c/fields/Contact_s_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_Address__c</fullName>
    <formula>Contact__r.Account.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact&apos;s Address</label>
    <type>Text</type>
</CustomField>