force-app/main/default/objects/Sample_Request__c/fields/Contact_s_City__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_City__c</fullName>
    <formula>Contact__r.Account.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact&apos;s City</label>
    <type>Text</type>
</CustomField>