force-app/main/default/objects/Sample_Request__c/fields/Contact_s_Firm__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_Firm__c</fullName>
    <formula>Contact__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact&apos;s Firm</label>
    <type>Text</type>
</CustomField>