force-app/main/default/objects/Sample_Request__c/fields/Contact_s_State__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_State__c</fullName>
    <formula>Contact__r.Account.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact&apos;s State</label>
    <type>Text</type>
</CustomField>