force-app/main/default/objects/Sample_Request__c/fields/Contact_s_Zip__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_Zip__c</fullName>
    <formula>Contact__r.Account.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact&apos;s Zip</label>
    <type>Text</type>
</CustomField>