force-app/main/default/objects/Sample_Request__c/fields/Dancik_PO__c.field-meta.xml
<CustomField>
    <fullName>Dancik_PO__c</fullName>
    <label>Dancik PO #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>