force-app/main/default/objects/Sample_Request__c/fields/Finish__c.field-meta.xml
<CustomField>
    <fullName>Finish__c</fullName>
    <label>Finish</label>
    <length>24</length>
    <type>Text</type>
</CustomField>