force-app/main/default/objects/Sample_Request__c/fields/Freight_Cost__c.field-meta.xml
<CustomField>
    <fullName>Freight_Cost__c</fullName>
    <label>Freight Cost</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>