force-app/main/default/objects/Sample_Request__c/fields/Grab_Go__c.field-meta.xml
<CustomField>
    <fullName>Grab_Go__c</fullName>
    <inlineHelpText>Checkbox for samples pulled from local branch inventory and not shipped from Corporate Sample Department</inlineHelpText>
    <label>Grab &amp; Go</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>