force-app/main/default/objects/Sample_Request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The opportunity related to the sample request</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Sample_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>