force-app/main/default/objects/Sample_Request__c/fields/Sample_Cost__c.field-meta.xml
<CustomField>
    <fullName>Sample_Cost__c</fullName>
    <label>Sample Cost</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>