force-app/main/default/objects/Sample_Request__c/fields/Sample_Series__c.field-meta.xml
<CustomField>
    <fullName>Sample_Series__c</fullName>
    <label>Sample Series</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sample_Vendor__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>10Thirty Collection</fullName>
            </value>
            <value>
                <fullName>125 Sound &amp; Crack Isolation</fullName>
            </value>
            <value>
                <fullName>15Thirty Collection</fullName>
            </value>
            <value>
                <fullName>254/255</fullName>
            </value>
            <value>
                <fullName>4XLT</fullName>
            </value>
            <value>
                <fullName>Accentstone</fullName>
            </value>
            <value>
                <fullName>Adore</fullName>
            </value>
            <value>
                <fullName>Advance</fullName>
            </value>
            <value>
                <fullName>Algoma mats</fullName>
            </value>
            <value>
                <fullName>Allora</fullName>
            </value>
            <value>
                <fullName>Alloy</fullName>
            </value>
            <value>
                <fullName>Aluminum</fullName>
            </value>
            <value>
                <fullName>Alysse</fullName>
            </value>
            <value>
                <fullName>Amazonas</fullName>
            </value>
            <value>
                <fullName>Amber Valley</fullName>
            </value>
            <value>
                <fullName>Americana</fullName>
            </value>
            <value>
                <fullName>Ankara</fullName>
            </value>
            <value>
                <fullName>Ann Sacks Collection</fullName>
            </value>
            <value>
                <fullName>Antares</fullName>
            </value>
            <value>
                <fullName>Antissa</fullName>
            </value>
            <value>
                <fullName>Arbor House</fullName>
            </value>
            <value>
                <fullName>Argent</fullName>
            </value>
            <value>
                <fullName>Artistic Tile</fullName>
            </value>
            <value>
                <fullName>Aruba</fullName>
            </value>
            <value>
                <fullName>Ashbury</fullName>
            </value>
            <value>
                <fullName>Ash Creek</fullName>
            </value>
            <value>
                <fullName>Ashton</fullName>
            </value>
            <value>
                <fullName>Autentica</fullName>
            </value>
            <value>
                <fullName>Avani</fullName>
            </value>
            <value>
                <fullName>Aventis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>