force-app/main/default/objects/Sample_Request__c/fields/Sample_Type__c.field-meta.xml
<CustomField>
    <fullName>Sample_Type__c</fullName>
    <label>Sample Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chip</fullName>
            </value>
            <value>
                <fullName>Dealer Board</fullName>
            </value>
            <value>
                <fullName>Loose Piece</fullName>
            </value>
            <value>
                <fullName>SKI Board</fullName>
            </value>
            <value>
                <fullName>Swatch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>