force-app/main/default/objects/Sample_Request__c/fields/Sample_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Sample_Vendor__c</fullName>
    <label>Sample Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>American Olean</fullName>
            </value>
            <value>
                <fullName>Anatolia</fullName>
            </value>
            <value>
                <fullName>Ann Sacks</fullName>
            </value>
            <value>
                <fullName>Aqua Mix</fullName>
            </value>
            <value>
                <fullName>Artistic Tile</fullName>
            </value>
            <value>
                <fullName>Atlas Concorde</fullName>
            </value>
            <value>
                <fullName>Bisazza</fullName>
            </value>
            <value>
                <fullName>Buchtal</fullName>
            </value>
            <value>
                <fullName>Caribe</fullName>
            </value>
            <value>
                <fullName>Casa Dolce Casa</fullName>
            </value>
            <value>
                <fullName>Crossville</fullName>
            </value>
            <value>
                <fullName>Custom Building Products</fullName>
            </value>
            <value>
                <fullName>E&amp;S</fullName>
            </value>
            <value>
                <fullName>Florida Tile</fullName>
            </value>
            <value>
                <fullName>Florim</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Imola</fullName>
            </value>
            <value>
                <fullName>Ironrock</fullName>
            </value>
            <value>
                <fullName>Island Stone</fullName>
            </value>
            <value>
                <fullName>Jeffrey Court</fullName>
            </value>
            <value>
                <fullName>Laticrete</fullName>
            </value>
            <value>
                <fullName>LTD Forum</fullName>
            </value>
            <value>
                <fullName>Mandala</fullName>
            </value>
            <value>
                <fullName>Marble Systems</fullName>
            </value>
            <value>
                <fullName>Marca Corona</fullName>
            </value>
            <value>
                <fullName>Mission Stone</fullName>
            </value>
            <value>
                <fullName>MLW</fullName>
            </value>
            <value>
                <fullName>NAC</fullName>
            </value>
            <value>
                <fullName>Noble</fullName>
            </value>
            <value>
                <fullName>Oceanside</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>