force-app/main/default/objects/Sample_Request__c/fields/Shipping_From__c.field-meta.xml
<CustomField>
    <fullName>Shipping_From__c</fullName>
    <label>Shipping From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LTD Warehouse</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>