force-app/main/default/objects/Sample_Request__c/fields/Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method__c</fullName>
    <description>The method by which the sample should be sent.</description>
    <label>Shipping Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LTD Transfer Truck</fullName>
            </value>
            <value>
                <fullName>LTL Carrier</fullName>
            </value>
            <value>
                <fullName>Pickup at Branch</fullName>
            </value>
            <value>
                <fullName>UPS 2nd Day</fullName>
            </value>
            <value>
                <fullName>UPS Ground</fullName>
            </value>
            <value>
                <fullName>UPS Next Day</fullName>
            </value>
            <value>
                <fullName>UPS Next Day AM Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>