force-app/main/default/objects/Sample_Request__c/fields/Shipping_To__c.field-meta.xml
<CustomField>
    <fullName>Shipping_To__c</fullName>
    <label>Shipping To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>LTD Branch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>