force-app/main/default/objects/Sample_Request__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <label>Tracking Number</label>
    <length>36</length>
    <type>Text</type>
</CustomField>