force-app/main/default/objects/Sample_Request__c/validationRules/Backorder_Date_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Backorder_Date_required</fullName>
    <active>true</active>
    <errorConditionFormula>ispickval( Status__c , &quot;Back-ordered&quot;) &amp;&amp; isblank ( Backorder_Date__c )</errorConditionFormula>
    <errorMessage>Backorder Date required when Status = Backordered</errorMessage>
</ValidationRule>