force-app/main/default/objects/Sample_Request__c/validationRules/Finish_Required_for_Loose_Piece_Samples.validationRule-meta.xml
<ValidationRule>
    <fullName>Finish_Required_for_Loose_Piece_Samples</fullName>
    <active>true</active>
    <errorConditionFormula>ispickval( Sample_Type__c, &quot;Loose Piece&quot;) &amp;&amp;
isblank( Finish__c )</errorConditionFormula>
    <errorMessage>Finish is required for loose piece samples</errorMessage>
</ValidationRule>