force-app/main/default/objects/Sample_Request__c/validationRules/Quantity_Required_on_Sample_Requests.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Required_on_Sample_Requests</fullName>
    <active>true</active>
    <errorConditionFormula>isblank (Quantity__c)</errorConditionFormula>
    <errorMessage>Quantity is required for all sample requests</errorMessage>
</ValidationRule>