force-app/main/default/objects/Sample_Request__c/validationRules/Size_Required_for_Loose_Piece_Samples.validationRule-meta.xml
<ValidationRule>
    <fullName>Size_Required_for_Loose_Piece_Samples</fullName>
    <active>true</active>
    <errorConditionFormula>ispickval( Sample_Type__c, &quot;Loose Piece&quot;) &amp;&amp;
isblank( Size__c )</errorConditionFormula>
    <errorMessage>Size is required for loose piece samples</errorMessage>
</ValidationRule>