force-app/main/default/objects/Sample_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>Accounting</group>
        <group>Executive</group>
        <group>OperationsPurchasing</group>
    </sharedTo>
</ListView>