force-app/main/default/objects/Sample_Request__c/listViews/Evansville_Sample_Requests.listView-meta.xml
<ListView>
    <fullName>Evansville_Sample_Requests</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Contact__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Shipping_Method__c</columns>
    <columns>Additional_Shipping_Instructions__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch__c</field>
        <operation>equals</operation>
        <value>50</value>
    </filters>
    <label>Evansville Sample Requests</label>
    <sharedTo>
        <group>Accounting</group>
        <group>EvansvilleBranch</group>
        <group>Executive</group>
        <group>OperationsPurchasing</group>
    </sharedTo>
</ListView>