force-app/main/default/objects/Sample_Request__c/listViews/My_Sample_Requests.listView-meta.xml
<ListView>
    <fullName>My_Sample_Requests</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Contact__c</columns>
    <columns>Sample_Vendor__c</columns>
    <columns>Sample_Series__c</columns>
    <columns>Color__c</columns>
    <columns>Size__c</columns>
    <columns>Finish__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Sample Requests</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>